adding doc for rating and workshop
