# swagger_output.json
@@ -346,6 +346,36 @@
         ]
       }
     },
+    "/beneficiaries/filter": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "options": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/beneficiaries/photo": {
       "post": {
         "tags": [
@@ -775,9 +805,21 @@
     "beneficiary": {
       "type": "object",
       "properties": {
-        "full_name": {
+        "first_name": {
           "type": "string",
-          "example": "John Doe"
+          "example": "Alice"
+        },
+        "second_name": {
+          "type": "string",
+          "example": "Marie"
+        },
+        "first_last_name": {
+          "type": "string",
+          "example": "Johnson"
+        },
+        "second_last_name": {
+          "type": "string",
+          "example": "Smith"
         },
         "identification_type": {
           "type": "string",
@@ -785,59 +827,111 @@
         },
         "identification": {
           "type": "string",
-          "example": "123456789"
+          "example": "987654321"
         },
         "eps": {
           "type": "string",
-          "example": "615aeb801dc581234567890a"
+          "example": "615cd24b8e60a0a123456789"
         },
         "sisben_score": {
-          "type": "number",
-          "example": 85
+          "type": "string",
+          "example": "75"
         },
         "birthday": {
           "type": "string",
-          "example": "1990-05-15"
+          "example": "1995-08-20"
         },
         "gender": {
           "type": "string",
-          "example": "Masculino"
+          "example": "Femenino"
+        },
+        "sex": {
+          "type": "string",
+          "example": "Mujer"
         },
         "ethnic_affiliation": {
           "type": "string",
-          "example": "Indigena"
+          "example": "Afro"
         },
         "marital_status": {
           "type": "string",
-          "example": "Casado"
+          "example": "Soltero"
         },
         "is_disability": {
           "type": "boolean",
           "example": true
         },
+        "health_regimen": {
+          "type": "string",
+          "example": "Contributivo"
+        },
+        "residence_department": {
+          "type": "string",
+          "example": "Bogotá"
+        },
+        "sisben_department": {
+          "type": "string",
+          "example": "Cundinamarca"
+        },
+        "civil_status": {
+          "type": "string",
+          "example": "Soltero"
+        },
+        "ethnicity": {
+          "type": "string",
+          "example": "Afro"
+        },
+        "disability": {
+          "type": "string",
+          "example": "Visual"
+        },
+        "ocupation": {
+          "type": "string",
+          "example": "Empleo formal"
+        },
+        "education_level": {
+          "type": "string",
+          "example": "Universitaria"
+        },
+        "is_victim_armed_conflict": {
+          "type": "string",
+          "example": "No"
+        },
         "type_of_disability": {
           "type": "string",
-          "example": "Movilidad"
+          "example": "Visual"
         },
         "place_of_birth": {
           "type": "string",
-          "example": "Bogota"
-        },
-        "region": {
-          "type": "string",
-          "example": "Andina"
+          "example": "Bogotá"
         },
         "municipality": {
           "type": "string",
-          "example": "Bogota"
+          "example": "Bogotá"
+        },
+        "community": {
+          "type": "string",
+          "example": "615cd24b8e60a0a523456789"
+        },
+        "association": {
+          "type": "string",
+          "example": "615cd24b8e60a0a623456789"
+        },
+        "activity": {
+          "type": "string",
+          "example": "615cd24b8e60a0a723456789"
+        },
+        "photo_url": {
+          "type": "string",
+          "example": "https://example.com/alice_johnson.jpg"
         },
         "neighborhood": {
           "type": "string",
-          "example": "Chapinero"
+          "example": "Downtown"
         },
         "address": {
           "type": "string",
-          "example": "Calle 123, Carrera 45"
+          "example": "456 Elm St"
         },
         "phones": {
           "type": "array",
@@ -851,11 +945,11 @@
         },
         "responsible_family_member": {
           "type": "string",
-          "example": "Jane Doe"
+          "example": "John Johnson"
         },
         "kinship": {
           "type": "string",
-          "example": "Esposa"
+          "example": "Padre"
         }
       }
     },
@@ -868,35 +962,72 @@
         },
         "description": {
           "type": "string",
-          "example": "Volunteer event to clean up the local park"
+          "example": "A day of cleaning up the local park."
         },
         "execution_date": {
           "type": "string",
-          "example": "2023-08-20T10:00:00Z"
-        },
-        "municipality": {
-          "type": "string",
-          "example": "615aeb801dc581234567890b"
-        },
-        "community": {
-          "type": "string",
-          "example": "615aeb801dc581234567890c"
+          "example": "2023-10-15T09:00:00Z"
         },
         "participatingAssociations": {
           "type": "array",
           "example": [
-            "615aeb801dc581234567890d",
-            "615aeb801dc581234567890e"
+            "615cd24b8e60a0a123456789",
+            "615cd24b8e60a0a223456789"
           ],
           "items": {
             "type": "string"
           }
+        }
+      }
+    },
+    "workshop": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Workshop on Web Development"
+        },
+        "execution_date": {
+          "type": "string",
+          "example": "2023-09-25T10:00:00Z"
+        },
+        "activity": {
+          "type": "string",
+          "example": "615cd24b8e60a0a123456789"
         },
         "attendees": {
           "type": "array",
           "example": [
-            "615aeb801dc581234567890f",
-            "615aeb801dc5812345678910"
+            "615cd24b8e60a0a223456789",
+            "615cd24b8e60a0a323456789"
+          ],
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "rating": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Participant Rating"
+        },
+        "execution_date": {
+          "type": "string",
+          "example": "2023-09-30T15:30:00Z"
+        },
+        "activity": {
+          "type": "string",
+          "example": "615cd24b8e60a0a123456789"
+        },
+        "attendees": {
+          "type": "array",
+          "example": [
+            "615cd24b8e60a0a223456789",
+            "615cd24b8e60a0a323456789",
+            "615cd24b8e60a0a423456789"
           ],
           "items": {
             "type": "string"
